<resources>
    <string name="app_name">RedditSavedLinks</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_blank_textview">Text</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="popup_unsave_link_in_reddit">Unsave redditLink in reddit</string>
    <string name="popup_delete_link_from_app">Delete redditLink from app</string>
    <string name="popup_delete_unsave_link_from_app">Delete and unsave redditLink</string>
    <string name="popup_open_link_in_browser">Open Link</string>
    <string name="popup_open_link_in_reddit">Open in reddit</string>
    <string name="submitted_on">submitted on</string>
</resources>
